[gd_scene load_steps=6 format=2]

[ext_resource path="res://audio/Get Schooled - Overworld Theme.mp3" type="AudioStream" id=1]
[ext_resource path="res://audio/Teach This - Overworld Theme 2.mp3" type="AudioStream" id=2]
[ext_resource path="res://audio/Burn Notice - Battle Theme.mp3" type="AudioStream" id=3]
[ext_resource path="res://audio/No Talk Me - Boss Theme.mp3" type="AudioStream" id=4]
[ext_resource path="res://Music.gd" type="Script" id=5]

[node name="Music" type="Node2D"]
pause_mode = 2
script = ExtResource( 5 )

[node name="OverworldTheme" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )

[node name="OverworldTheme2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="BattleTheme" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="BossTheme" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="Tween" type="Tween" parent="."]
